<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/player1"
            android:id="@+id/button4"
            android:layout_column="0"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/player2"
            android:id="@+id/button7"
            android:layout_column="1"
            android:layout_weight="0.5" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/player3"
            android:id="@+id/button5"
            android:layout_column="0"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/player4"
            android:id="@+id/button6"
            android:layout_column="1"
            android:layout_weight="0.5" />
    </TableRow>
</TableLayout>