<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:id="@+id/statsButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="112dp"
        android:onClick="onStatsButtonSelected"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reactionTimer"
        android:id="@+id/reactionTimerButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onReactionTimerButtonSelected" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameshowBuzzer"
        android:id="@+id/gameshowBuzzerButton"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/reactionTimerButton"
        android:layout_centerHorizontal="true"
        android:onClick="onGameshowBuzzerSelected" />
</RelativeLayout>
